# ASG-benchmark

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  REFERENCES.md  lichess_mate_in_1_puzzles.json  sample_puzzles.json
.claude/: settings.local.json
data/: lichess_mate_in_1_puzzles.json  lichess_multi_type_puzzles.json  sample_puzzles.json
scripts/: download_chess_images.py
src/: evaluation.rs  game.rs  lib.rs  main.rs  puzzle.rs
src/benchmark/: main.rs
src/generate/: main.rs
